--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <script src="https://kit.fontawesome.com/e54598ab59.js" crossorigin="anonymous"></script>
 </head>
 <body class="manrope-font">
-    
+    <header class="pt-16">
+        <section class="max-w-6xl mx-auto px-4 flex flex-col lg:flex-row gap-4">
+            <div class="space-y-7">
+                <h1 class="text-5xl/15 lg:text-7xl/23 font-extrabold text-primary">It's good <br> tea time at The <br> Tea House</h1>
+                <p class="text-secondary text-lg font-medium">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <button class="px-5 py-4 rounded-[10px] text-white font-bold text-xl bg-gradient-to-r from-[#FF8938] to-[#FF0000]">Explore More <i class="fa-solid fa-arrow-right ml-2 -rotate-45"></i></button>
+            </div>
+            <div class="relative top-14">
+                <img src="images/banner.png" alt="banner image" class="w-full max-w-xl">
+                <div class="px-6 py-4 flex items-center gap-4 shadow-[0_7px_50px_rgba(0,0,0,0.06)] bg-white rounded-[10px] absolute bottom-8 left-14 z-10">
+                    <img src="images/Group 5.png" alt="star" class="w-12 h-12">
+                    <h5>
+                        <span class="font-extrabold text-3xl">5.00</span>
+                        <span class="block text-secondary">Trust Pilot Ratings</span>
+                    </h5>
+                </div>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
