--- a/index.html
+++ b/index.html
@@ -28,5 +28,80 @@
             </div>
         </section>
     </header>
+    <main class="max-w-6xl mx-auto px-4 mt-[150px]">
+        <section class="text-center mb-[130px]">
+            <h2 class="text-5xl font-bold mb-5">Our Featured Products</h2>
+            <p class="max-w-4xl mx-auto mb-12 text-primary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 justify-items-center">
+                <div class="bg-gradient-to-b from-[#F4F4F4] to-[rgba(244,244,244,0)] px-5 py-7 rounded-lg max-w-xs">
+                    <img src="images/tea-1.png" alt="milk tea" class="mx-auto mb-7">
+                    <h4 class="font-bold text-2xl mb-2">Milk Tea</h4>
+                    <p class="text-secondary font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-[#F4F4F4] to-[rgba(244,244,244,0)] px-5 py-7 rounded-lg max-w-xs">
+                    <img src="images/tea-2.png" alt="black tea" class="mx-auto mb-7">
+                    <h4 class="font-bold text-2xl mb-2">Black Tea</h4>
+                    <p class="text-secondary font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-[#F4F4F4] to-[rgba(244,244,244,0)] px-5 py-7 rounded-lg max-w-xs">
+                    <img src="images/tea-3.png" alt="lemond tea" class="mx-auto mb-7">
+                    <h4 class="font-bold text-2xl mb-2">Lemon Tea</h4>
+                    <p class="text-secondary font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-[#F4F4F4] to-[rgba(244,244,244,0)] px-5 py-7 rounded-lg max-w-xs">
+                    <img src="images/tea-4.png" alt="green tea" class="mx-auto mb-7">
+                    <h4 class="font-bold text-2xl mb-2">Green Tea</h4>
+                    <p class="text-secondary font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+            </section>
+        </section>
+        <section class="flex flex-col justify-center items-center lg:flex-row gap-12 mb-[130px]">
+            <div class="lg:w-1/2 max-w-2xl grid grid-cols-2 gap-4 md:gap-7 grid-rows-3">
+                <div class="bg-gradient-to-r from-[#FF0000] to-[#FF8938] opacity-10 rounded-xl"></div>
+                <div class="bg-[rgba(230,166,35,0.1)] row-span-2 p-7 rounded-xl">
+                    <img src="images/fresh-1.png" alt="fresh tea 1" class="mx-auto w-full">
+                </div>
+                <div class="bg-[rgba(87,118,57,0.1)] row-span-2 p-7 rounded-xl">
+                    <img src="images/fresh-2.png" alt="fresh tea 2" class="mx-auto w-full">
+                </div>
+                <div class="bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] rounded-xl"></div>
+            </div>
+            <article class="lg:w-1/2 max-w-2xl space-y-5">
+                <h3 class="text-3xl md:text-5xl font-bold text-primary">Great Tea, Freshly Presented</h3>
+                <p class="text-secondary">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <h4 class="text-primary text-lg font-bold">Unique Taste</h4>
+                <p class="text-secondary">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h4 class="text-primary text-lg font-bold">Premium Quality</h4>
+                <p class="text-secondary">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </article>
+        </section>
+        <section class="bg-gradient-to-l from-[#FF0000] to-[#FF8938] rounded-xl p-4 sm:px-16 sm:py-20 flex flex-col lg:flex-row items-center gap-12 mb-[130px]">
+            <div class="text-white lg:w-1/2">
+                <h3 class="text-5xl/snug font-bold">Meet Our Super <br> Clients</h3>
+                <p class="text-base/relaxed font-medium mt-5 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                <button class="rounded-lg py-3 px-7 font-bold bg-white text-[#FF0000]">Show All</button>
+            </div>
+            <section class="w-full lg:w-1/2 relative flex flex-col gap-16 items-end">
+                <div class="bg-white rounded-lg relative p-10 pl-12 opacity-30 max-w-[376px]">
+                    <img src="images/client.png" alt="client" class="absolute -top-5 -left-5 border-4 border-white rounded-full">
+                    <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h5 class="text-base text-primary font-bold mt-5 mb-1">Ilham Yuda</h5>
+                    <p>Businessman</p>
+                </div>
+                <div class="bg-white rounded-lg relative p-10 pl-12 opacity-30 max-w-[376px]">
+                    <img src="images/client.png" alt="client" class="absolute -top-5 -left-5 border-4 border-white rounded-full">
+                    <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h5 class="text-base text-primary font-bold mt-5 mb-1">Ilham Yuda</h5>
+                    <p>Businessman</p>
+                </div>
+                <div class="bg-white rounded-lg p-10 pl-12 absolute top-[30%] left-2 sm:-left-8 max-w-[430px]">
+                    <img src="images/client.png" alt="client" class="absolute -top-5 -left-5 border-4 border-white rounded-full">
+                    <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h5 class="text-base text-primary font-bold mt-5 mb-1">Ilham Yuda</h5>
+                    <p>Businessman</p>
+                </div>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
