--- a/index.html
+++ b/index.html
@@ -147,5 +147,56 @@
             </section>
         </section>
     </main>
+    <footer class="bg-gradient-to-l from-[rgba(255,0,0,0.1)] to-[rgba(255,137,56,0.1)]">
+        <section class="max-w-7xl mx-auto px-4 xl:px-1 py-32">
+             <div class="sm:flex justify-between mb-24">
+                <img src="images/cup.png" alt="cup image">
+                <div class="mt-8 sm:mt-auto">
+                    <h3 class="text-xl inline-block mr-10 mb-5 sm:mb-auto">Ready to get started?</h3>
+                    <button class="text-xl font-bold bg-gradient-to-r from-[#FF0000] to-[#FF8938] rounded-[10px] px-6 py-3 text-white w-fit "> Get Started </button>
+                </div>
+             </div>
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+                <div>
+                    <h4 class="text-xl font-semibold mb-5">Quick Links</h4>
+                    <ul class="space-y-4">
+                        <li><a href="#" class="text-[#494949]">Home</a></li>
+                        <li><a href="#" class="text-[#494949]">About us</a></li>
+                        <li><a href="#" class="text-[#494949]">Insurance</a></li>
+                        <li><a href="#" class="text-[#494949]">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-xl font-semibold mb-5">Our Service</h4>
+                    <ul class="space-y-4">
+                        <li><a href="#" class="text-[#494949]">Life Insurance</a></li>
+                        <li><a href="#" class="text-[#494949]">Car Insurance</a></li>
+                        <li><a href="#" class="text-[#494949]">Health Insurance</a></li>
+                        <li><a href="#" class="text-[#494949]">House Insurance</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-xl font-semibold mb-5">Help</h4>
+                    <ul class="space-y-4">
+                        <li><a href="#" class="text-[#494949]">FAQs</a></li>
+                        <li><a href="#" class="text-[#494949]">Contact us</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="text-2xl/10 font-semibold mb-10">Subscribe to our <br> newsletter</h3>
+                    <input type="email" placeholder="Email Address" class="border-b pb-3 w-4/5">
+                    <div class="bg-gradient-to-r from-[#FF0000] to-[#FF8938] p-3 text-white rounded-full w-8 h-8 inline-flex justify-center items-center">
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+                    <div class="mt-13 space-x-6">
+                        <a href="#"> <i class="fa-brands fa-facebook-f text-xl"></i> </a>
+                        <a href="#"> <i class="fa-brands fa-twitter text-xl"></i> </a>
+                        <a href="#"> <i class="fa-brands fa-instagram text-xl"></i> </a>
+                    </div>
+                </div>
+            </div>
+            <p class="mt-15 text-gray-600 text-center">© 2027 UIDesign.to - All rights reserved.</p>
+        </section>
+    </footer>
 </body>
 </html>
